--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <div id="chat"></div>
-    <input type="text" id="chat-input"> <button onclick="sendMessage()">Send</button>
+    <input id="chat-input" type="text"> <button onclick="sendMessage()">Send Message</button>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script>
         socket = io()
