--- a/templates/index.html
+++ b/templates/index.html
@@ -7,15 +7,28 @@
 </head>
 <body>
     <div id="chat"></div>
-    <input id="chat-input" type="hidden" value="{{user}}"> <button onclick="sendMessage()">Buzzer</button>
+    {% if user == 'Buzzer-Host' %}
+    <input id="chat-input" type="hidden" value=""> <button onclick="sendMessage()" id="{{user}}" class="button">Clear Screen</button>
+    {% else %}
+    <input id="chat-input" type="hidden" value="{{user}}"> <button onclick="sendMessage()" id="{{user}}" class="button">Buzzer</button>
+    {% endif %}
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script>
         socket = io()
         function sendMessage () {
+            const button = document.querySelector('#{{user}}')
+            button.disabled = true
             socket.emit("message",document.getElementById("chat-input").value)
         }
         socket.on("new_message",(data)=>{
-            document.getElementById("chat").innerHTML+="<br>"+data;
+            if(data == ""){
+                document.getElementById("chat").innerHTML="";
+                const button = document.querySelector('.button')
+                button.disabled = false
+            }
+            else{
+                document.getElementById("chat").innerHTML+="<br>"+data;
+            }
         })
     </script>
 </body>
