--- a/templates/index.html
+++ b/templates/index.html
@@ -3,28 +3,120 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Buzzer</title>
+    
+    <style>
+        .main {
+            margin : 0 auto;
+            width : 100%;
+            text-align : center
+        }
+    </style>
+
+    <title>{{user}} - Buzzer</title>
 </head>
 <body>
-    <div id="chat"></div>
-    {% if user == 'Buzzer-Host' %}
-    <input id="chat-input" type="hidden" value=""> <button onclick="sendMessage()" id="{{user}}" class="button">Clear Screen</button>
+    <div class = "main">
+    {% if user == 'Just-Google-It-Buzzer-Host' %}
+    <h1>Just Google It Buzzer Host</h1>
+    <input id="chat-input" type="hidden" value=""> <button onclick="sendMessage()" id="{{user}}" class="button"><img src="{{ url_for('static', filename='img/enabutton.png') }}" id="img-{{user}}" class="img"></button>
     {% else %}
-    <input id="chat-input" type="hidden" value="{{user}}"> <button onclick="sendMessage()" id="{{user}}" class="button">Buzzer</button>
+    <h1>Player {{user}}</h1>
+    <input id="chat-input" type="hidden" value="{{user}}"> <button onclick="sendMessage()" id="{{user}}" class="button"><img src="{{ url_for('static', filename='img/enabutton.png') }}" id="img-{{user}}" class="img"></button>
     {% endif %}
+    
+    <h1>Buzz Order</h1>
+    <h2 id="chat"></h2>
+    {% if user == 'Just-Google-It-Buzzer-Host' %}
+    
+    <h1>Score Table</h1>
+    <center><table id="table" style="table-layout: auto; width: 50%;" border="2">
+		<th>Players</th>
+		<th>Score</th>
+		<tr>
+			<td><center>Aavinash &nbsp; &nbsp;<button id="add" value="+" onclick="add()">+</button></center></td>
+			<td><center><span id="score">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Alvis <button id="add" value="+" onclick="add_1()">+</button></center></td>
+			<td><center><span id="score_1">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Augustin <button id="add" value="+" onclick="add_2()">+</button></center></td>
+			<td><center><span id="score_2">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Aishwarya <button id="add" value="+" onclick="add_3()">+</button></center></td>
+			<td><center><span id="score_3">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Charles <button id="add" value="+" onclick="add_4()">+</button></center></td>
+			<td><center><span id="score_4">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Gokul <button id="add" value="+" onclick="add_5()">+</button></center></td>
+			<td><center><span id="score_5">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Kamal <button id="add" value="+" onclick="add_6()">+</button></center></td>
+			<td><center><span id="score_6">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Palani <button id="add" value="+" onclick="add_7()">+</button></center></td>
+			<td><center><span id="score_7">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Rakshmitha <button id="add" value="+" onclick="add_8()">+</button></center></td>
+			<td><center><span id="score_8">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Sameena <button id="add" value="+" onclick="add_9()">+</button></center></td>
+			<td><center><span id="score_9">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Sanjay <button id="add" value="+" onclick="add_10()">+</button></center></td>
+			<td><center><span id="score_10">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Vaishnavi <button id="add" value="+" onclick="add_11()">+</button></center></td>
+			<td><center><span id="score_11">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Vyshnavi <button id="add" value="+" onclick="add_12()">+</button></td>
+			<td><center><span id="score_12">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Vignesh <button id="add" value="+" onclick="add_13()">+</button></center></td>
+			<td><center><span id="score_13">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Karthik <button id="add" value="+" onclick="add_14()">+</button></center></td>
+			<td><center><span id="score_14">0</span></center></td>
+		</tr>
+		<tr>
+			<td><center>Yagan <button id="add" value="+" onclick="add_15()">+</button></center></td>
+			<td><center><span id="score_15">0</span></center></td>
+		</tr>
+	</table></center>
+    {% endif %}
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
     <script>
         socket = io()
         function sendMessage () {
-            const button = document.querySelector('#{{user}}')
+            var button = document.querySelector('#{{user}}')
             button.disabled = true
+            var img = document.querySelector('#img-{{user}}')
+            img.src = '{{ url_for('static', filename='img/disbutton.png') }}'
             socket.emit("message",document.getElementById("chat-input").value)
         }
         socket.on("new_message",(data)=>{
             if(data == ""){
                 document.getElementById("chat").innerHTML="";
-                const button = document.querySelector('.button')
+                var button = document.querySelector('.button')
                 button.disabled = false
+                var img = document.querySelector('.img')
+                img.src = '{{ url_for('static', filename='img/enabutton.png') }}'
+
             }
             else{
                 document.getElementById("chat").innerHTML+="<br>"+data;
